Add space for attention based mappo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
         "editor.defaultFormatter": "ms-python.black-formatter",
         "editor.formatOnSave": true
     },
+
+    "editor.insertSpaces": false,
+    "editor.formatOnSave": true,
+
     "editor.tokenColorCustomizations": {
         "textMateRules": [
             {
